# torch-pme

./: .codecov.yml  .gitignore  .readthedocs.yaml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  sandbox.py  tox.ini
.github/workflows/: build-release.yml  build.yml  docs.yml  documentation-links.yml  lint.yml  release.yml  tests.yml
benchmark/: README.rst  geometry.in  run.py  test_fft.py  test_filter.py  test_kspace.py
docs/: requirements.txt
docs/extensions/: versions_list.py
docs/generate_examples/: conf.py  generate-examples.py
docs/src/: about.rst  conf.py  index.rst  installation.rst  sg_execution_times.rst
examples/: 01-charges-example.py  02-neighbor-lists-usage.py  03-mesh-demo.py  05-autograd-demo.py  06-splined-potential.py  07-lode-demo.py  08-combined-potential.py  09-atomistic-model.py  1-charges-example.py  1-charges_example.py  10-tuning.py  12-padding-example.py  2-backprop-nl.py  2-mesh-demo.py  2-neighbor-lists-usage.py  3-kspace-demo.py  3-mesh-demo.py  4-autograd-demo.py  4-kspace-demo.py  5-autograd-demo.py  6-lode-demo.py  6-splined-potential.py  6-tuning-parameters.py  7-lode-demo.py  8-combined-potential.py  9-atomistic-model.py  README.rst  basic-tutorial.py  basic-usage-kevin.ipynb  basic-usage.py  charges_example.py  dipoles_test_frames.xyz  kspace-demo.py  library-tutorial.py  madelung.py  mesh-demo.py  neighborlist_example.ipynb  neighborlist_example.py
latest/: .buildinfo  about.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
latest/_modules/: index.html
latest/_sources/: index.rst.txt
latest/_static/: documentation_options.js
latest/examples/: 01-charges-example.html  02-neighbor-lists-usage.html  03-mesh-demo.html  04-kspace-demo.html  05-autograd-demo.html  06-splined-potential.html  07-lode-demo.html  08-combined-potential.html  09-atomistic-model.html  1-charges-example.html  10-tuning.html  11-4-site-water.html  12-padding-example.html  2-neighbor-lists-usage.html  3-mesh-demo.html  4-kspace-demo.html  5-autograd-demo.html  6-splined-potential.html  7-lode-demo.html  8-combined-potential.html  9-atomistic-model.html  basic-usage.html  index.html
latest/references/: changelog.html  index.html  metatensor.html  prefactors.html
list/: .buildinfo  about.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
list/_modules/: index.html
list/_static/: documentation_options.js
list/examples/: 01-charges-example.html  02-neighbor-lists-usage.html  03-mesh-demo.html  04-kspace-demo.html  05-autograd-demo.html  06-splined-potential.html  07-lode-demo.html  08-combined-potential.html  09-atomistic-model.html  10-tuning.html  11-4-site-water.html  basic-usage.html  index.html
list/references/: changelog.html  index.html  metatensor.html  prefactors.html
src/meshlode/: __init__.py  calculators.py  fourier.py  fourier_convolution.py  mesh.py  mesh_interpolator.py  projection.py  radial.py  system.py
src/torchpme/: __init__.py  _utils.py
tests/: calculators.py  helpers.py  requirements.txt  test_calculators.py  test_fourier_convolution.py  test_init.py  test_madelung.py  test_magnetostatics.py  test_mesh_interpolator.py  test_potentials.py  test_prefactors.py  test_tuning.py
tests/calculators/: pbc_structures.xyz  test_accuracy.py  test_base.py  test_calculator.py  test_calculator_base.py  test_calculators_workflow.py  test_meshpotential.py  test_padding.py  test_tuning.py  test_values_aperiodic.py  test_values_dipole.py  test_values_direct.py  test_values_ewald.py  test_values_periodic.py  test_workflow.py  test_workflow_direct.py  test_workflow_ewald.py  test_workflow_mesh.py  test_workflow_meshewald.py  utils.py
tests/lib/: test_fourier_convolution.py  test_kspace_filter.py  test_kvectors.py  test_math.py  test_mesh_interpolator.py  test_neighbors.py  (+3 more)
v0.1.0/: .buildinfo  about.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.2.0/: .buildinfo  about.html  contributing.html  genindex.html  index.html  installation.html  py-modindex.html  search.html  searchindex.js
v0.3.0/: .buildinfo  about.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.3.1/: about.html  contributing.html  genindex.html  index.html  installation.html  py-modindex.html  search.html  searchindex.js
v0.3.2/: about.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.4.0/: .buildinfo  about.html  contributing.html  genindex.html  index.html  installation.html  py-modindex.html  search.html  searchindex.js
v0.5.0/: .buildinfo  about.html  contributing.html  genindex.html  index.html  installation.html  py-modindex.html  search.html  searchindex.js
(+1138 files in other folders)
