[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "torch-pme"
description = "Particle-mesh based calculations of long-range interactions in PyTorch"
authors = [{name = "torch-pme developers"}]

readme = "README.rst"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Framework :: PyTorch",
]
keywords = [
    "PyTorch",
    "Auto-differentiation",
    "Particle-Mesh Ewald",
    "Electrostatics",
    "Computational Materials Science",
    "Machine Learning",
    "Molecular Dynamics",
    "GPU Acceleration",
    "High-Performance Computing",
    "Fourier Transform",
    "TorchScript",
    "Scientific Computing",
]
dependencies = [
    "torch >=2.3",
]
dynamic = ["version"]

[project.optional-dependencies]
examples = [
    "ase >= 3.22.1",
    "matplotlib",
    "vesin-torch@git+https://github.com/luthaf/vesin@torch#subdirectory=python/vesin-torch"
]
metatensor = [
    "metatensor-torch <0.6,>=0.5",
]

[project.urls]
homepage = "http://torch-pme.readthedocs.io"
documentation = "http://torch-pme.readthedocs.io"
repository = "https://github.com/lab-cosmo/torch-pme"
issues = "https://github.com/lab-cosmo/torch-pme/issues"

[tool.coverage.report]
show_missing = true
include = [
    "src/torchpme/*"
]

[tool.coverage.run]
branch = true
data_file = 'tests/.coverage'

[tool.coverage.xml]
output = 'tests/coverage.xml'

[tool.black]
exclude = 'docs/src/examples'

[tool.isort]
skip = "__init__.py"
profile = "black"
line_length = 88
indent = 4
include_trailing_comma = true
lines_after_imports = 2
known_first_party = "torchpme"

[tool.mypy]
exclude = [
    "docs/src/examples"
]
follow_imports = 'skip'
ignore_missing_imports = true

[tool.pytest.ini_options]
python_files = ["*.py"]
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore:ast.Str is deprecated and will be removed in Python 3.14:DeprecationWarning",
    "ignore:Attribute s is deprecated and will be removed in Python 3.14:DeprecationWarning",
    "ignore:ast.NameConstant is deprecated and will be removed in Python 3.14:DeprecationWarning",
    "ignore:custom data 'charges' is experimental, please contact metatensor's developers to add this data as a member of the `System` class:UserWarning",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "torchpme.__version__"}
